--- a/html/pg_stats_reporter/css/pg_stats_reporter.css
+++ b/html/pg_stats_reporter/css/pg_stats_reporter.css
@@ -97,6 +97,15 @@ div.linegraph {
   border: 1px solid #4297d7;
 }
 
+/* jqplot class */
+div.piegraph {
+  width: 320px;
+  height: 320px;
+  margin-top: 10px;
+  margin-left: 10px;
+  position: relative;
+}
+
 /* initial report page */
 p.initial_page {
   font-size: x-large;
