¨tablesorterのフォントサイズを変更¨

--- a/html/pg_stats_reporter/css/pg_stats_reporter.css
+++ b/html/pg_stats_reporter/css/pg_stats_reporter.css
@@ -188,6 +188,13 @@ div.graph_button {
   text-align:left;
   background-color: #e6eeee;
   width: 50%;
+  font-size: 120%;
+}
+.tablesorter thead th {
+  font-size: 120%;
+}
+.tablesorter tbody td {
+  font-size: 120%;
 }
 
 
