¨theadのthのフォントサイズが変わっていなかったのを修正¨

--- a/html/pg_stats_reporter/css/pg_stats_reporter.css
+++ b/html/pg_stats_reporter/css/pg_stats_reporter.css
@@ -190,7 +190,7 @@ div.graph_button {
   width: 50%;
   font-size: 120%;
 }
-.tablesorter thead th {
+table.tablesorter thead tr th {
   font-size: 120%;
 }
 .tablesorter tbody td {
