レフトメニューのアコーディオン内の文字列が折りかえるように修正

--- a/html/pg_stats_reporter/css/pg_stats_reporter.css
+++ b/html/pg_stats_reporter/css/pg_stats_reporter.css
@@ -58,6 +58,7 @@ h3 {
 background-color:#80bfff;
 text-align:left;
 height:100%;
+word-wrap: break-word;
 overflow:auto;
 scrollbar-3dlight-color:#ffeaff;
 scrollbar-arrow-color:#ffeaff;
