・"Column"ボタンの項目表示がスクール時に固定される問題を修正

--- a/html/pg_stats_reporter/css/pg_stats_reporter.css
+++ b/html/pg_stats_reporter/css/pg_stats_reporter.css
@@ -274,7 +274,7 @@ table.tablesorter thead tr th {
 }
 
 .columnSelector {
-  position: fixed;
+  position: absolute;
   margin-top: 2px;
   background: #fff;
   border: #99bfe6 1px solid;
