検索オプションのMESSAGE項目を単一行で配置するように変更

--- a/html/pg_stats_reporter/css/pg_stats_reporter.css
+++ b/html/pg_stats_reporter/css/pg_stats_reporter.css
@@ -261,7 +261,10 @@ table.tablesorter thead tr th {
 
 #search_menu fieldset {
   border: none;
-  float: left;
+}
+
+#search_menu fieldset span {
+  margin-right: 15px;
 }
 
 #search_submit {
