検索オプションのオブジェクトの配置方法を<table>タグを使用した実装に修正

--- a/html/pg_stats_reporter/css/pg_stats_reporter.css
+++ b/html/pg_stats_reporter/css/pg_stats_reporter.css
@@ -259,12 +259,13 @@ table.tablesorter thead tr th {
   overflow: hidden;
 }
 
-#search_menu fieldset {
-  border: none;
+#search_menu table {
+  margin: 5px;
 }
 
-#search_menu fieldset span {
-  margin-right: 15px;
+#search_menu table td {
+  padding-right: 15px;
+  padding-bottom: 5px;
 }
 
 #search_submit {
