・アラート項目のヘルプにアラート機能の設定手順に関する記述を追加 ・検索オプションの"ELEVEL"と"MESSAGE"の表示位置を調整

--- a/html/pg_stats_reporter/css/pg_stats_reporter.css
+++ b/html/pg_stats_reporter/css/pg_stats_reporter.css
@@ -264,8 +264,16 @@ table.tablesorter thead tr th {
 }
 
 #search_menu table td {
-  padding-right: 15px;
   padding-bottom: 5px;
+}
+
+#search_menu table .form_label {
+  text-align: right;
+}
+
+#search_menu table .form_input {
+  text-align: left;
+  padding-right: 8px;
 }
 
 #search_submit {
