・ヘッダメニュおよびレポート本体の大分類の項目名を変更 ・ログレポートのヘルプのメッセージを変更

--- a/html/pg_stats_reporter/css/pg_stats_reporter.css
+++ b/html/pg_stats_reporter/css/pg_stats_reporter.css
@@ -229,7 +229,7 @@ table.tablesorter thead tr th {
   font-size: 120%;
 }
 
-/* log report */
+/* log viewer */
 #dropdown2 li {
   background: #CCFFCC;
 }
