--- a/html/pg_stats_reporter/css/pg_stats_reporter.css
+++ b/html/pg_stats_reporter/css/pg_stats_reporter.css
@@ -1,7 +1,7 @@
 /*
  * pg_stats_reporter: Cascading Style Sheets
  *
- * Copyright (c) 2012,2014, NIPPON TELEGRAPH AND TELEPHONE CORPORATION
+ * Copyright (c) 2012-2015, NIPPON TELEGRAPH AND TELEPHONE CORPORATION
  */
 body {
   font-size: 70%;
