ヘルプダイアログのメッセージ差し替え

--- a/html/pg_stats_reporter/css/pg_stats_reporter.css
+++ b/html/pg_stats_reporter/css/pg_stats_reporter.css
@@ -355,6 +355,12 @@ div.graph_button {
   float: left;
 }
 
+/* help dialog */
+li em {
+  font-style: normal;
+  font-weight: bold;
+}
+
 /* message dialog */
 #message_dialog {
   font-weight: bold;
