[SR-018]対応。全文表示ダイアログで改行有りの文字列のフォントサイズが小さくなる問題を修正

--- a/html/pg_stats_reporter/css/pg_stats_reporter.css
+++ b/html/pg_stats_reporter/css/pg_stats_reporter.css
@@ -369,7 +369,12 @@ li em {
   margin: 5px 0px;
 }
 
+pre.query_dialog {
+  font-size: 100%;
+}
+
 pre {
   margin-top: 0px;
   margin-bottom: 0px;
 }
+
